--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ HOST=0.0.0.0
 PORT=3000
 SESSION_SECRET=a secret with minimum length of 32 characters
 #DB
-DB_HOST=192.168.1.13
+DB_HOST=db
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=root_db
